# EchoVoice

./: .gitignore  README.md  agent.md  claude.md  package.json  pnpm-lock.yaml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/audio/: device.rs  engine.rs  fx.rs  mixer.rs  mod.rs
src-tauri/src/audio/dsp/: compressor.rs  eq.rs  mod.rs  pitch.rs
src/lib/: i18n.ts
src/routes/: +page.svelte
