[package]
name = "echovoice"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echovoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasapi = "0.22"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
ringbuf = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5.15"
bytemuck = "1.25.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-dialog = "2.6.0"

# Optimize dependencies even in debug builds to radically speed up audio decoding/resampling
[profile.dev.package."*"]
opt-level = 3
